--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,1 +1,22 @@
 @import "material-design-icons/iconfont/material-icons.css";
+@import "./components";
+
+html,
+body {
+	height: 100%;
+}
+
+html,
+body,
+#app,
+[data-reactroot] {
+	width: 100%;
+	min-height: 100%;
+	margin: 0;
+	padding: 0;
+}
+
+#app {
+	display: flex;
+	background: var(--backgroundColor);
+}
