Switched to material-ui

--- a/assets/css/components/selection.css
+++ b/assets/css/components/selection.css
@@ -1,4 +1,4 @@
 *::selection {
-	background: var(--primaryColor);
-	color: var(--primaryTextColor);
+	background: var(--palette-primary-400);
+	color: var(--palette-primary-50);
 }
