--- a/assets/css/components/typography.css
+++ b/assets/css/components/typography.css
@@ -1,5 +1,5 @@
 body {
-	font-family: var(--bodyFont);
+	font-family: var(--typography-fontFamily);
 }
 
 h1,
@@ -10,7 +10,7 @@ h5,
 h6 {
 	margin: .5em 0;
 	line-height: 110%;
-	font-family: var(--headingFont);
+	font-family: var(--typography-headline-fontFamily);
 	font-weight: 400;
 }
 
@@ -27,9 +27,6 @@ h4 { font-size: 1.12em; }
 
 h5 { font-size: .83em; }
 
-h6 {
-	font-size: .75em;
-	font-family: var(--bodyFont);
-}
+h6 { font-size: .75em; }
 
 p { margin: 1em 0; }
